--- a/amplify/backend/backend-config.json
+++ b/amplify/backend/backend-config.json
@@ -1,8 +1,14 @@
 {
-	"auth": {
-		"cognitocf0c6096": {
-			"service": "Cognito",
-			"providerPlugin": "awscloudformation"
-		}
-	}
+  "auth": {
+    "cognitocf0c6096": {
+      "service": "Cognito",
+      "providerPlugin": "awscloudformation"
+    }
+  },
+  "storage": {
+    "filesstorage1": {
+      "service": "S3",
+      "providerPlugin": "awscloudformation"
+    }
+  }
 }
